--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,9 +56,9 @@ jobs:
           TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
         fi
 
-        DOCKERFILE=ads-api/Dockerfile
-        if [[ $SERVICE == "ads-api" ]]; then
-          DOCKERFILE=ads-api/Dockerfile
+        DOCKERFILE=Dockerfile
+        if [[ $SERVICE == "ads-jobs" ]]; then
+          DOCKERFILE=Dockerfile
         fi
 
         echo ::set-output name=tags::${TAGS}
